# DesignPatternLab

./: .gitignore  CMakeLists.txt  Lab1Doc.html  Lab1Doc.md  lab1.md
CMDLineTextEditor/: CMakeLists.txt  HowToRefactoring.md
CMDLineTextEditor/src/: Application.cpp  Application.h  Command.cpp  Command.h  CommandExecuting.h  Core.h  Editor.cpp  Editor.h  Logging.cpp  Logging.h  Outputer.h  TreeDrawer.cpp  TreeDrawer.h  Workspace.cpp  Workspace.h  main.cpp
CMDLineTextEditor/src/Components/: Editor.cpp  Editor.h  Logging.cpp  Workspace.cpp  Workspace.h
CMDLineTextEditor/tests/: CMakeLists.txt  test.cpp
CMDLineTextEditor/tests/testfile/: logstatedfile
